--- a/html/day03/homework.html
+++ b/html/day03/homework.html
@@ -10,23 +10,34 @@
 </head>
 <body>
     <header>
-        <h2><img src="./img/jd_logo.png" alt="">欢迎登录</h2>
+        <h2>
+            <a href="#"><img src="./img/jd_logo.png" alt=""></a>
+            欢迎登录
+        </h2>
     </header>
     <section>
-        <form action="" method="GET">
+        <form action="" method="POST">
             <table border="1px" align="center" width="800px">
                 <tr>
-                    <td rowspan="8" width="440px"><img src="./img/login.png" alt=""></td>
-                    <td>用户名/邮箱：</td>
+                    <td rowspan="8" width="440px">
+                        <a href="#"><img src="./img/login.png" alt=""></a>
+                    </td>
+                    <td>
+                        用户名/邮箱：
+                    </td>
                 </tr>
                 <tr>
                     <td><input type="text" name="uname"></td>
                 </tr>
                 <tr>
-                    <td>密码：</td>
+                    <td>
+                        密码：
+                    </td>
                 </tr>
                 <tr>
-                    <td><input type="password" name="upwd"></td>
+                    <td>
+                        <input type="password" name="upwd">
+                    </td>
                 </tr>
                 <tr>
                     <td>
@@ -41,7 +52,9 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>使用京东合作账号登录</td>
+                    <td>
+                        使用京东合作账号登录
+                    </td>
                 </tr>
                 <tr>
                     <td align="right">
