--- a/html/day04/homework.html
+++ b/html/day04/homework.html
@@ -12,13 +12,18 @@
     <div id="d1">打印我</div>
     <input type="button" value="打印" onclick="dy()">
     <div id="d2">改变前的我</div>
-    <input type="button" value="改变" onclick="gb()">
+    <input type="button" value="改变" onclick="gb()"><br>
+    <input type="button" value="表格" onclick="table()">
+    <div id="d3"></div>
     <script>
         function dy() {
             console.log(d1.innerHTML)
         }
         function gb() {
             d2.innerHTML = '改变后的我'
+        }
+        function table() {
+            d3.innerHTML = '<table border="1px"><tr><td>1</td><td>1</td><td>1</td></tr><tr><td>1</td><td>1</td><td>1</td></tr><tr><td>1</td><td>1</td><td>1</td></tr></table>'
         }
     </script>
 </body>
