--- a/css/day06/floor.html
+++ b/css/day06/floor.html
@@ -28,21 +28,14 @@
             width: 609px;
             height: 377px;    
         }
-        #content>div:nth-child(1)>img{
-            position: absolute;
-            top: 56px;
-            right: 30px;
-            cursor: pointer;
-            transition: 1s;
-            width: 390px;
-            height: 300px;
+        #content>div:nth-child(2){
+            width: 381px;
+            height: 377px;
         }
-        #content>div:nth-child(1)>img:hover{
-            position: absolute;
-            right: 15px;
-            top: 37px;
-            width: 429px;
-            height: 330px;
+        #content>div:nth-child(3){
+            width: 377px;
+            height: 235px;
+            margin-right: 9px;
         }
         .desc{
             width: 245px;
@@ -78,9 +71,22 @@
             border-radius: 2px;
             cursor: pointer;
         }
-        #content>div:nth-child(2){
-            width: 381px;
-            height: 377px;
+        .product{
+            width: 198px;
+            height: 235px;
+            background: #e8e8e8;
+        }
+        #content>div:nth-child(1)>img{
+            position: absolute;
+            top: 56px;
+            right: 30px;
+            cursor: pointer;
+            transition: 1s;
+            width: 390px;
+            height: 300px;
+        }
+        #content>div:nth-child(1)>img:hover{
+            transform: scale(1.1)
         }
         #content>div:nth-child(2) .desc{
             width: 253px;
@@ -99,11 +105,7 @@
             height: 232px;
         }
         #content>div:nth-child(2)>img:hover{
-            position: absolute;
-            width: 321px;
-            height: 255px;
-            right: 15px;
-            bottom: 11px;
+            transform: scale(1.1)
         }
     </style>
 </head>
@@ -127,10 +129,12 @@
             </div>
             <img src="./img/study_computer_img2.png" alt="">
         </div>
-        <div></div>
-        <div class="porduct"></div>
-        <div class="porduct"></div>
-        <div class="porduct"></div>
+        <div>
+
+        </div>
+        <div class="product"></div>
+        <div class="product"></div>
+        <div class="product"></div>
     </div>
 </body>
 </html>
