--- a/css/boot/project/index.html
+++ b/css/boot/project/index.html
@@ -4,14 +4,101 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        iframe{
-            width: 100%;
-            height: 150px;
-        }
-    </style>
+    <link rel="stylesheet" href="../css/bootstrap.css"/>
+    <script src="../js/jquery.min.js"></script>
+    <script src="../js/popper.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="./css/base.css"/>
 </head>
 <body>
-    <iframe src="./head.html" frameborder="0"></iframe>
+    <header>
+        <iframe src="./head.html" frameborder="0" scrolling="no" class="my_header"></iframe>
+    </header>
+    <div class="b-carousel">
+        <iframe src="./carousel.html" frameborder="0" carolling="no" class="my_carousel"></iframe>
+    </div>
+    <div class="container">
+        <div class="mt-3 mb-3">
+            <div>
+                <a href="#">
+                    <img src="http://www.codeboy.com/img/index/computer_icon.png" alt="">>&nbsp;&nbsp;首页推荐>1F
+                </a>
+            </div>
+            <div class="row">
+                <div class="col-md-7 col-sm-12">
+                    <div class="card border-0 flex-md-row bg_floor">
+                        <div class="card-body d-flex flex-column align-items-start">
+                            <h5>Apple MacBook Air系列</h5>
+                            <h6 class="mt-2 my_gray my_small">酷睿双核i5处理器|256GB SSD|8GB内存|英特尔HD显卡620含共享显卡内存</h6>
+                            <span class="base_color mb-3">￥6988.00</span>
+                            <a href="#" class="btn btn-primary">查看详情</a>
+                        </div>
+                        <img class="my_img1 img-fluid" src="http://www.codeboy.com/img/index/study_computer_img1.png" alt="">
+                    </div>
+                </div>
+                <div class="col-md-5 col-sm-12">
+                    <div class="card border-0 flex-md-row bg_floor">
+                        <div class="card-body d-flex flex-column align-content-start floor_card2">
+                            <h5>小米Air 金属超轻薄</h5>
+                            <h6 class="my_small my_gray mb-2">酷睿双核i5处理器|512GB SSD|2GB内存|英特尔HD独立显卡</h6>
+                            <span class="base_color mb-3">￥3488.00</span>
+                            <a href="#" class="btn btn-primary">查看详情</a>
+                        </div>
+                        <img src="http://www.codeboy.com/img/index/study_computer_img2.png" alt="" class="img-fluid my_img2">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-5 col-sm-12">
+                    <div class="card border-0 flex-md-row bg_floor mt-2 floor_m3">
+                        <div class="card-body d-flex flex-column align-content-start floor_card3">
+                            <h5>联想E480C 轻薄系列</h5>
+                            <span class="base_color mb-3">￥5399.00</span>
+                            <a href="#" class="btn btn-primary">查看详情</a>
+                        </div>
+                        <img src="http://www.codeboy.com/img/index/study_computer_img3.png" class="my_img3" alt="">
+                    </div>
+                </div>
+                <div class="col-md-7 col-sm-12">
+                    <div class="row mt-2">
+                        <div class="col-sm-4">
+                            <div class="card border-0 bg_floor text-center">
+                                <img src="http://www.codeboy.com/img/index/study_computer_img4.png" class="my_img4" alt="">
+                                <div class="card-body">
+                                    <h6 class="my_small my_gray m-0">华硕RX310 金属超极本</h6>
+                                    <span class="base_color m-0">￥4966.00</span>
+                                    <a href="#" class="my_btn btn btn-primary">查看详情</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="card border-0 bg_floor text-center">
+                                <img src="http://www.codeboy.com/img/index/study_computer_img4.png" class="my_img4" alt="">
+                                <div class="card-body">
+                                    <h6 class="my_small my_gray m-0">华硕RX310 金属超极本</h6>
+                                    <span class="base_color m-0">￥4966.00</span>
+                                    <a href="#" class="my_btn btn btn-primary">查看详情</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="card border-0 bg_floor text-center">
+                                <img src="http://www.codeboy.com/img/index/study_computer_img4.png" class="my_img4" alt="">
+                                <div class="card-body">
+                                    <h6 class="my_small my_gray m-0">华硕RX310 金属超极本</h6>
+                                    <span class="base_color m-0">￥4966.00</span>
+                                    <a href="#" class="my_btn btn btn-primary">查看详情</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <footer>
+        <iframe src="./foot.html" frameborder="0" scrolling="no" class="my_footer"></iframe>
+    </footer>
 </body>
 </html>
