--- a/css/day06/floor.html
+++ b/css/day06/floor.html
@@ -14,7 +14,6 @@
         #content{
             width: 1010px;
             margin: 20px auto;
-            float: left;
         }
         #content>div{
             background-color: #e8e8e8;
@@ -130,7 +129,13 @@
             <img src="./img/study_computer_img2.png" alt="">
         </div>
         <div>
-
+            <div class="desc">
+                <p class="name"></p>
+                <p class="details"></p>
+                <p class="price"></p>
+                <a class="view" href="#"></a>
+            </div>
+            <img src="./img/study_computer_img3.png" alt="">
         </div>
         <div class="product"></div>
         <div class="product"></div>
