--- a/js/dom/day03/11_navigator.html
+++ b/js/dom/day03/11_navigator.html
@@ -1,13 +1,55 @@
-﻿<!DOCTYPE HTML>
-<html>
-<head>
-<title>navigator对象常用属性</title>
-<meta charset="utf-8" />
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <title>navigator对象常用属性</title>
 </head>
+
 <body>
-	<script>
-	
-  </script>
+    <script>
+        if (navigator.cookieEnabled) {
+            document.write("<h1>已启用cookie，请妥善选择保存个人信息</h1>")
+        } else {
+            document.write("<h1>cookie已禁用，无法记住密码</h1>")
+        }
+        if (navigator.plugins["Chrome PDF Plugin"] === undefined) {
+            document.write("<h1>未安装PDF插件,<a href='javascript:;'>点此下载</a></h1>")
+        } else {
+            document.write("<h1>已安装PDF插件！</h1>")
+        }
+        if (navigator.plugins["Shockwave Flash"] === undefined) {
+            document.write("<h1>未安装adobe flash插件,<a href='javascript:;'>点此下载</a></h1>")
+        } else {
+            document.write("<h1>已安装adobe flash插件！</h1>")
+        }
+
+        var ua = navigator.userAgent;
+        document.write("<h1>" + ua + "</h1>");
+        var browser, version;
+        if (/Firefox/.test(ua))
+            browser = "Firefox";
+        else if (ua.indexOf("IE") != -1)
+            browser = "IE";
+        else if (ua.indexOf("Trident") != -1)
+            browser = "IE", version = 11;
+        else if (ua.indexOf("OPR") != -1)
+            browser = "OPR";
+        else if (ua.indexOf("Edge") != -1)
+            browser = "Edge";
+        else if (ua.indexOf("Chrome") != -1)
+            browser = "Chrome";
+        else if (ua.indexOf("Safari") != -1)
+            browser = "Safari";
+        document.write("<h1>" + browser + "</h1>")
+
+        if (version === undefined) {
+            var i = ua.indexOf(browser);
+            i += browser.length + 1;
+            version = parseInt(ua.slice(i, i + 3));
+        }
+        document.write("<h1>" + version + "</h1>")
+    </script>
 </body>
+
 </html>
