--- a/js/dom/day03/7_close.html
+++ b/js/dom/day03/7_close.html
@@ -1,21 +1,28 @@
 ﻿<!DOCTYPE HTML>
 <html>
+
 <head>
-<title>倒计时自动关闭/跳转页面</title>
-<meta charset="utf-8" />
+  <title>倒计时自动关闭/跳转页面</title>
+  <meta charset="utf-8" />
 
 </head>
+
 <body>
-	<span>5秒钟后自动关闭</span><br>
-	<a href="jacascript:myClose()">留在本页</a>
+  <span>5秒钟后自动关闭</span><br>
+  <a href="jacascript:myClose()">留在本页</a>
   <script>
-	  function task() {
-      close()
+    function task() {
+      var span = document.body.children[0];
+      var n = parseInt(span.innerHTML);
+      n--;
+      if (n == 0) close();
+      else span.innerHTML = `${n}秒钟后自动关闭`
     }
-    var n = setTimeout(task,5000)
+    var n = setInterval(task, 1000)
     function myClose() {
-      clearTimeout(n)
+      clearInterval(n);
     }
   </script>
 </body>
+
 </html>
