--- a/js/dom/day04/2_bubble.html
+++ b/js/dom/day04/2_bubble.html
@@ -14,7 +14,17 @@
 			</div>
 		</div>
     <script>
-			
-		</script>
+		d1.onclick = function (e) {
+			alert("d1疼！")
+		}
+		d2.onclick = function (e) {
+			e.stopPropagation()
+			alert("d2疼！")
+		}
+		d3.onclick = function (e) {
+			e.stopPropagation()
+			alert("d3疼！")
+		}
+	</script>
 	</body>
 </html>
