--- a/js/dom/day04/3_calc.html
+++ b/js/dom/day04/3_calc.html
@@ -17,7 +17,11 @@
 		</div>
 		<textarea id="sc" style="resize:none;width:200px; height:50px;" readonly></textarea>
     <script>
-			
-		</script>
+		keys.onclick = function(e){
+			if (e.target.nodeName == "BUTTON") {
+				
+			}
+		}
+	</script>
 	</body>
 </html>
