--- a/js/jQuery/day01/11_visibility filter.html
+++ b/js/jQuery/day01/11_visibility filter.html
@@ -19,7 +19,7 @@
 </div>
 <script src="js/jquery-1.11.3.js"></script>
 <script>
-  console.log( $(':hidden') )
+  console.log( $('div>:hidden') )
 </script>
 </body>
 </html>
