--- a/js/jQuery/day03/13_widget_tabs.html
+++ b/js/jQuery/day03/13_widget_tabs.html
@@ -28,9 +28,9 @@
 	</div>
 
 	<script src="js/jquery-1.11.3.js"></script>
-	<script src="jquery-ui-1.11.4/jquery-ui.js"></script>
+	<script src="js/jquery-ui.js"></script>
 	<script>
-
+		$("#my-tabs").tabs()
 	</script>
  </body>
 </html>
