--- a/js/jQuery/day03/15_tabs.html
+++ b/js/jQuery/day03/15_tabs.html
@@ -63,18 +63,9 @@
     </div>
   </div>
   <script src="js/jquery-1.11.3.js"></script>
+  <script src="./js/jquery-ui.js"></script>
   <script>
-	  $(".tabs:has([data-toggle=tab])")
-      .on("click","[data-toggle=tab]",e=>{
-      var $tar=$(e.target);
-      if(!$tar.parent().is(".active")){
-        $tar.parent().addClass("active")
-          .siblings().removeClass("active");
-        var id=$tar.attr("href");
-        $(id).addClass("active")
-          .siblings().removeClass("active");
-      }
-    })
+    $("#my-tabs").tabs()
   </script>
 </body>
 </html>
